Code/.metadata/.plugins/org.eclipse.cdt.ui/lab4.build.log
17:20:14 **** Incremental Build of configuration Debug for project lab4 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/sch.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sch.d" -MT"Core/Src/sch.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/sch.o"
In file included from ../Core/Src/main.c:25:
../Core/Inc/sch.h:32:37: error: unknown type name 'tByte'
   32 | unsigned char SCH_Delete_Task(const tByte TASK_INDEX);
      |                                     ^~~~~
In file included from ../Core/Src/sch.c:7:
../Core/Inc/sch.h:32:37: error: unknown type name 'tByte'
   32 | unsigned char SCH_Delete_Task(const tByte TASK_INDEX);
      |                                     ^~~~~
../Core/Src/sch.c: In function 'SCH_Init':
../Core/Src/sch.c:20:5: warning: implicit declaration of function 'Timer_init' [-Wimplicit-function-declaration]
   20 |     Timer_init();
      |     ^~~~~~~~~~
../Core/Src/sch.c:21:5: warning: implicit declaration of function 'Watchdog_init' [-Wimplicit-function-declaration]
   21 |     Watchdog_init();
      |     ^~~~~~~~~~~~~
../Core/Src/sch.c: At top level:
../Core/Src/sch.c:24:15: error: conflicting types for 'SCH_Add_Task'
   24 | unsigned char SCH_Add_Task(void (* pFunction)(), unsigned int DELAY, unsigned int PERIOD)
      |               ^~~~~~~~~~~~
In file included from ../Core/Src/sch.c:7:
../Core/Inc/sch.h:27:6: note: previous declaration of 'SCH_Add_Task' was here
   27 | void SCH_Add_Task ( void (*pFunction)() ,
      |      ^~~~~~~~~~~~
../Core/Src/sch.c: In function 'SCH_Add_Task':
../Core/Src/sch.c:37:22: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   37 |         Error_code_G = "ERROR_SCH_TOO_MANY_TASKS";
      |                      ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:99:2: warning: implicit declaration of function 'System_Initialization' [-Wimplicit-function-declaration]
   99 |  System_Initialization();
      |  ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:103:15: error: 'Led_Display' undeclared (first use in this function)
  103 |  SCH_Add_Task(Led_Display,0,1000);
      |               ^~~~~~~~~~~
../Core/Src/main.c:103:15: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/sch.c: In function 'SCH_Dispatch_Tasks':
../Core/Src/sch.c:89:5: warning: implicit declaration of function 'SCH_Report_Status' [-Wimplicit-function-declaration]
   89 |     SCH_Report_Status();
      |     ^~~~~~~~~~~~~~~~~
../Core/Src/sch.c:91:5: warning: implicit declaration of function 'SCH_Go_To_Sleep' [-Wimplicit-function-declaration]
   91 |     SCH_Go_To_Sleep();
      |     ^~~~~~~~~~~~~~~
../Core/Src/sch.c: At top level:
../Core/Src/sch.c:94:37: error: unknown type name 'tByte'
   94 | unsigned char SCH_Delete_Task(const tByte TASK_INDEX){
      |                                     ^~~~~
../Core/Src/sch.c: In function 'SCH_Delete_Task':
../Core/Src/sch.c:100:22: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  100 |         Error_code_G = "ERROR_SCH_CANNOT_DELETE_TASK";
      |                      ^
../Core/Src/sch.c:103:21: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  103 |         Return_code = "RETURN_ERROR";
      |                     ^
../Core/Src/sch.c:105:21: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  105 |         Return_code = "RETURN_NORMA";
      |                     ^
make: *** [Core/Src/subdir.mk:40: Core/Src/sch.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

17:20:15 Build Failed. 8 errors, 9 warnings. (took 1s.349ms)

